--- a/index.html
+++ b/index.html
@@ -8,13 +8,53 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 
     <title>Little Lemon</title>
+    <style>
+        .row{
+            background: rgb(211, 209, 211);
+        }
+    </style>
 
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-12">
-            
+                <div class="text-center">
+                    <img src="logo.png" class="img-fluid" alt="logo">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="text-center">
+                    <h1>Our Menu</h1>
+                </div>
+                <div class="alert alert-info" role="alert">
+                    Our resturaunt will be closed on New Year's Day
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <h2>Falafel <span class="badge bg-secondary"><strong>New</strong></span></h2>
+                <p>Chickpea, Herbs, Spices</p>
+                <h2>Fried Calamari</h2>
+                <p>Squid, Buttermilk</p>
+            </div>
+            <div class="col-12 col-lg-6">
+                    <h2>Pasta Salad</h2>
+                    <p>Lettuce, Vegetables, Mozzarella</p>
+                    <h2>Greek Salad</h2>
+                    <p>Cucumbers, Onion, Feta cheese</p>
+            </div> 
+        </div>               
+        <div class="row">
+            <div class="col-12">
+                <div class="text-center">
+                    <button type="button" class="btn btn-dark">Order Online</button>
+                </div>
+            </div>
+        </div>          
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
